--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Big fan of Cloud Computing, Kubernetes and Distributed Systems.
   Main programming languages - Python, Golang and JavaScript.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "kenanbek.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://kenanbek.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  KenanBek
 youtube_username: CoderVlogger
 linkedin_username: KananRahimov
