--- a/_config.yml
+++ b/_config.yml
@@ -19,10 +19,11 @@ description: >- # this means to ignore newlines until "baseurl:"
   Software Engineer. Author <a href="https://youtube.com/CoderVlogger">@CoderVlogger</a>.
   Interested in data intensive applications, Data Processing, Analzye and Visualization.
   Big fan of Cloud Computing, Kubernetes and Distributed Systems.
-  Main programming languages - Python, Golang and JavaScript.
+  Main programming languages - Golang and Python.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://kenanbek.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  KenanBek
+twitter_username: KananRahimovCOM
 youtube_username: CoderVlogger
 linkedin_username: KananRahimov
 disqus:
