--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,8 @@
 title: Kanan Rahimov (KenanBek)
 email: mrkenanbek@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Software Engineer. Author <a href="https://youtube.com/CoderVlogger">@CoderVlogger</a>.
-  Interested in data intensive applications, Data Processing, Analzye and Visualization.
-  Big fan of Cloud Computing, Kubernetes and Distributed Systems.
+  Software Engineer. Author <a href="https://youtube.com/CoderVlogger">@CoderVlogger</a>. 
+  Interested in projects related to Cloud Computing, Kubernetes, Distributed Systems, and data-intensive applications. 
   Main programming languages - Golang and Python.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://kenanbek.github.io" # the base hostname & protocol for your site, e.g. http://example.com
