--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ url: "https://kenanbek.github.io" # the base hostname & protocol for your site, 
 github_username:  KenanBek
 twitter_username: KenanBekk
 linkedin_username: KananRahimov
-youtube_username: CoderVlogger
+#youtube_username: CoderVlogger
 disqus:
   shortname: KenanBek
 
