--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Kanan Rahimov (KenanBek)
 email: mrkenanbek@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Software Engineer. Main programming languages - Golang and Python.
+  Software Engineer. Golang and Python. Learning Rust.
   Interested in projects related to Cloud Computing, Kubernetes, Distributed Systems, and data-intensive applications. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://kenanbek.github.io" # the base hostname & protocol for your site, e.g. http://example.com
