--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,7 @@
 title: Kanan Rahimov (KenanBek)
 email: mrkenanbek@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Software Engineer. Golang and Python. Learning Rust.
-  Interested in projects related to Cloud Computing, Kubernetes, Distributed Systems, and data-intensive applications. 
+  Golang Software Engineer. Currently working as Software Engineering Manager at Beat. Interested in Go, Distributed Systems, and Open Source. Additionally, I like learning more about Rust, Flutter, and React Native.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://kenanbek.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  KenanBek
