--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,11 @@
 title: Kanan Rahimov (KenanBek)
 email: mrkenanbek@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Golang Software Engineer. Currently working as Sr. Staff Software Engineer at Beat. I am interested in Go, Distributed Systems, Dev Tools, and Open Source. Additionally, I like learning more about Rust, Flutter, and React Native.
+  Software Engineer at Mollie, building payment systems: routing, orchestration, PCI-DSS, cards and tokenization. 16+ years of experience in Java, Python, and Go.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://kenanbek.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  KenanBek
-twitter_username: KenanBekk
 linkedin_username: KananRahimov
-#youtube_username: CoderVlogger
 disqus:
   shortname: KenanBek
 
