--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,9 @@ plugins:
   - jekyll-feed
   - jekyll-octicons
 
+sass:
+  quiet_deps: true
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
